--- a/src/main/webapp/mobile/asset/asset/onlineregs/transact/transact0.html
+++ b/src/main/webapp/mobile/asset/asset/onlineregs/transact/transact0.html
@@ -551,7 +551,7 @@
 				//同意
 				else if (agree == 1) {
 					$.ajax({
-						url: "../../../asset/newTransact.do",
+						url: "../../../asset/.do",
 						data: {
 							openId: openId,
 							address: $('#address').val(),
